# Calories-Prediction

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
