[project]
name = "calories-prediction-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=1.17.3,<2.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scikit-learn==1.3.2",
    "seaborn>=0.13.2",
    "streamlit>=1.52.1",
    "uvicorn[standard]>=0.38.0",
    "xgboost>=3.1.2",
]
